# Cryptocurrency-trading-agent-with-Double-DQN

./: README.md  agent.py  args.py  env.py  grapher.py  pyproject.toml  requirements.txt  trainer.py
datasets/BTC/: train.csv  val.csv
datasets/ETH/: train.csv  val.csv
datasets/USDT/: train.csv  val.csv
results/BTC/ddqn/: train_results.csv  val_results.csv
results/BTC/dqn/: train_results.csv  val_results.csv
results/ETH/ddqn/: train_results.csv  val_results.csv
results/ETH/dqn/: train_results.csv  val_results.csv
results/USDT/ddqn/: train_results.csv  val_results.csv
results/USDT/dqn/: train_results.csv  val_results.csv
venv-3.7/: pyvenv.cfg
