[tool.poetry]
name = "22-deeprl-new-0221"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[project.dependencies]
python = "=3.9.18"
tensorflow = "~2.6"

[tool.poetry.dependencies]
python = "=3.9.18"
tensorflow = "~2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
